[package]
name = "gym_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "3.2.0", features = ["sync"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dotenv = "0.15.0"
jsonwebtoken = "9.0"
bcrypt = "0.16" # For password hashing
lazy_static = "1.5.0"
axum-login = "0.17.0"
async-trait = "0.1.85"
